--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "author": "Alexandru Pirvulescu <alex@tcnbroadcasting.com>",
   "dependencies": {
     "asterisk-manager": "^0.1.15",
-    "fibers": "^4.0.2",
     "sprintf-js": "^1.0.2",
-    "syncho": "^0.2.5"
+    "sync": "^0.2.5"
   },
   "directories": {
     "example": "examples"
